--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
     container_name: postgres_api
     image: postgres:13.0
     environment:
-      - POSTGRES_NAME = postgres
-      - POSTGRES_USER = postgres
-      - POSTGRES_PASSWORD = postgres
+      - POSTGRES_NAME=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
 
   django:
     container_name: django_api
@@ -19,4 +19,4 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      - postgres
